# SFML_Framework

./: CMakeLists.txt  LICENSE.md  README.md
SFML_Framework/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  SignalSlot.h  State.cpp  State.h  Window.cpp  Window.h
SFML_Framework/gui/: GUI.cpp  GUI.h  GUIGroup.cpp  GUIGroup.h  GUIImageset.cpp  GUIImageset.h  GUIWidget.cpp  GUIWidget.h
SFML_Framework/gui/widgets/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ColorPicker.cpp  ColorPicker.h  DropDownList.cpp  DropDownList.h  EditBox.cpp  EditBox.h  GUIWindow.cpp  GUIWindow.h  Label.cpp  Label.h  NumberField.cpp  NumberField.h  PasswordField.cpp  PasswordField.h  ProgressBar.cpp  ProgressBar.h  RadialCheckBox.cpp  RadialCheckBox.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  Spinner.cpp  Spinner.h  Thumb.cpp  Thumb.h
sandbox/: CMakeLists.txt  main.cpp  testGame.cpp  testGame.h  testState.cpp  testState.h
sandbox/resources/: TaharezLook.imageset
